--- a/notify-new-user/.gitignore
+++ b/notify-new-user/.gitignore
@@ -64,3 +64,8 @@ node_modules/
 
 # dotenv environment variables file
 .env
+
+#firebase exports
+auth_export/
+database_export
+firebase-export-metadata.json
