--- a/notify-new-user/functions/package.json
+++ b/notify-new-user/functions/package.json
@@ -2,9 +2,10 @@
   "name": "new-user-email-functions",
   "description": "Send an email to new users and users who delete their account",
   "dependencies": {
-    "nodemailer": "^6.4.3",
+    "@sendgrid/mail": "^7.4.1",
     "firebase-admin": "^9.4.2",
-    "firebase-functions": "^3.13.0"
+    "firebase-functions": "^3.13.0",
+    "nodemailer": "^6.4.3"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
