--- a/functions/package.json
+++ b/functions/package.json
@@ -15,8 +15,10 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "@types/nodemailer": "^6.4.16",
     "firebase-admin": "^12.6.0",
-    "firebase-functions": "^6.0.1"
+    "firebase-functions": "^6.0.1",
+    "nodemailer": "^6.9.16"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.12.0",
