--- a/functions/package.json
+++ b/functions/package.json
@@ -15,18 +15,21 @@
   },
   "main": "lib/index.js",
   "dependencies": {
-    "@types/nodemailer": "^6.4.16",
     "firebase-admin": "^12.6.0",
     "firebase-functions": "^6.0.1",
     "nodemailer": "^6.9.16"
   },
   "devDependencies": {
+    "@types/node": "^22.8.6",
+    "@types/nodemailer": "^6.4.16",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
     "eslint": "^8.9.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-import": "^2.25.4",
     "firebase-functions-test": "^3.1.0",
+    "nodemon": "^3.1.7",
+    "ts-node": "^10.9.2",
     "typescript": "^4.9.0"
   },
   "private": true
