--- a/functions/package.json
+++ b/functions/package.json
@@ -1,26 +1,37 @@
 {
-  "name": "new-user-email-functions",
-  "description": "Send an email to new users and users who delete their account",
-  "dependencies": {
-    "@sendgrid/mail": "^7.4.1",
-    "firebase-admin": "^9.4.2",
-    "firebase-functions": "^3.13.0",
-    "nodemailer": "^6.4.3"
-  },
-  "devDependencies": {
-    "eslint": "^6.8.0",
-    "eslint-plugin-promise": "^4.2.1"
-  },
+  "name": "functions",
   "scripts": {
-    "lint": "./node_modules/.bin/eslint --max-warnings=0 .",
-    "serve": "firebase emulators:start --only functions",
-    "shell": "firebase functions:shell",
+    "lint": "eslint --ext .js,.ts .",
+    "build": "tsc",
+    "build:watch": "tsc --watch",
+    "serve": "npm run build && firebase emulators:start --only functions,database,firestore,auth --import ./.data --export-on-exit ./.data",
+    "shell": "npm run build && firebase functions:shell",
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log"
   },
   "engines": {
-    "node": "12"
+    "node": "20"
+  },
+  "main": "lib/index.js",
+  "dependencies": {
+    "@sendgrid/mail": "^8.1.4",
+    "firebase-admin": "^12.6.0",
+    "firebase-functions": "^6.0.1",
+    "nodemailer": "^6.9.16"
+  },
+  "devDependencies": {
+    "@types/node": "^22.8.6",
+    "@types/nodemailer": "^6.4.16",
+    "@typescript-eslint/eslint-plugin": "^5.12.0",
+    "@typescript-eslint/parser": "^5.12.0",
+    "eslint": "^8.9.0",
+    "eslint-config-google": "^0.14.0",
+    "eslint-plugin-import": "^2.25.4",
+    "firebase-functions-test": "^3.1.0",
+    "nodemon": "^3.1.7",
+    "ts-node": "^10.9.2",
+    "typescript": "^4.9.0"
   },
   "private": true
 }
